# ToDoTake2

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  pyproject.toml
ansible-controller/: .env.j2  README.md  playbook.yaml
tests/: test_app.py  test_app_integration.py  test_view_model.py
todo_app/: README.md  app.py  trello.py
todo_app/data/: session_items.py  trello_items.py
todo_app/models/: view_model.py
todo_app/templates/: index.html  layout.html
